[build-system]
requires = ["setuptools>=62.3.2", "setuptools_scm[toml]>=6.2"]

[project]
name = "logobj"
dynamic = ["version"]
description = "Poorman's inspection debugger"
readme = "README.md"
license = {text = "MIT"}
keywords = ["inspect", "dump", "pprint"]
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"
